Name: reflex-dom
Version: 0.2
Synopsis: Functional Reactive Web Apps with Reflex
Description: Reflex-DOM is a Functional Reactive web framework based on the Reflex FRP engine
License: BSD3
License-file: LICENSE
Author: Ryan Trinkle
Maintainer: ryan.trinkle@gmail.com
Stability: Experimental
Category: FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
Build-type: Simple
Cabal-version: >=1.9.2
-- Deal with https://github.com/haskell/cabal/issues/2544 / https://github.com/haskell/cabal/issues/367
extra-source-files: src-ghc/Reflex/Dom/Internal/Foreign.hs
                    src-ghc/Reflex/Dom/Xhr/Foreign.hs
                    src-ghcjs/Reflex/Dom/Internal/Foreign.hs
                    src-ghcjs/Reflex/Dom/Xhr/Foreign.hs

library
  hs-source-dirs: src
  build-depends:
    base
    reflex
    dependent-sum
    dependent-map
    semigroups
    mtl
    containers
    these
    ref-tf
    transformers
    lens
    ghcjs-dom
    safe
    text
    bytestring
    data-default
    aeson
    time
    exception-transformers
    directory
    dependent-sum-template
    bifunctors

  if impl(ghcjs)
    hs-source-dirs: src-ghcjs
    cpp-options: -D__GHCJS__
    build-depends:
      ghcjs-base
  else
    hs-source-dirs: src-ghc
    build-depends:
      glib
      gtk3
      webkitgtk3
      webkitgtk3-javascriptcore

  exposed-modules:
    Reflex.Dom
    Reflex.Dom.Class
    Reflex.Dom.Internal
    Reflex.Dom.Widget
    Reflex.Dom.Widget.Basic
    Reflex.Dom.Widget.Input
    Reflex.Dom.Widget.Lazy
    Reflex.Dom.Xhr
    Reflex.Dom.Time
  other-modules:
    Reflex.Dom.Internal.Foreign
    Reflex.Dom.Xhr.Foreign

  other-extensions: TemplateHaskell
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -ferror-spans

source-repository head
  type: git
  location: https://github.com/ryantrinkle/reflex
